--- a/index.html
+++ b/index.html
@@ -6,66 +6,56 @@
     <title>ልማት Hub | Mission 2026</title>
     <style>
         :root { --blue: #003973; --yellow: #FFD700; --bg: #f0f4f8; --white: #ffffff; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; scroll-behavior: smooth; }
-        body { background: var(--bg); color: #333; line-height: 1.6; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
+        body { background: var(--bg); color: #333; }
 
-        /* 1. TICKER */
+        /* TICKER */
         .ticker-wrap { background: var(--yellow); color: var(--blue); padding: 12px 0; font-weight: 800; position: sticky; top: 0; z-index: 2000; overflow: hidden; }
         .ticker-move { display: inline-block; white-space: nowrap; padding-left: 100%; animation: ticker 25s linear infinite; }
         @keyframes ticker { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
 
-        /* 2. HEADER */
+        /* HEADER */
         header { background: var(--white); height: 80px; display: flex; justify-content: space-between; align-items: center; padding: 0 8%; position: sticky; top: 45px; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
         .logo { font-size: 26px; font-weight: 900; color: var(--blue); text-decoration: none; }
-        .nav-links a { text-decoration: none; color: #555; font-weight: 600; margin-left: 20px; transition: 0.3s; }
         .lang-select { border: 2px solid var(--blue); padding: 5px 10px; border-radius: 8px; font-weight: bold; cursor: pointer; }
 
-        /* 3. HERO SECTION */
+        /* HERO & INPUT */
         .container { max-width: 1100px; margin: 40px auto; padding: 0 20px; }
-        .hero { background: var(--blue); color: white; padding: 70px 30px; border-radius: 30px; text-align: center; box-shadow: 0 15px 35px rgba(0,57,115,0.2); border-bottom: 8px solid var(--yellow); }
-        .id-input { padding: 18px; width: 90%; max-width: 450px; border-radius: 15px; border: none; margin: 25px 0; font-size: 1.2rem; text-align: center; box-shadow: 0 5px 15px rgba(0,0,0,0.1); }
+        .hero { background: var(--blue); color: white; padding: 70px 30px; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); }
+        .id-input { padding: 18px; width: 90%; max-width: 400px; border-radius: 12px; border: 2px solid transparent; margin: 25px 0; font-size: 1.2rem; text-align: center; }
+        .id-input:focus { border-color: var(--yellow); outline: none; }
 
-        /* 4. TRACKS GRID */
-        .section-h { font-size: 2rem; color: var(--blue); margin: 60px 0 30px; border-left: 10px solid var(--yellow); padding-left: 20px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 30px; }
-        .card { background: var(--white); border-radius: 25px; overflow: hidden; box-shadow: 0 10px 20px rgba(0,0,0,0.05); transition: 0.3s; text-align: center; }
-        .card:hover { transform: translateY(-10px); box-shadow: 0 20px 40px rgba(0,0,0,0.1); }
-        .card img { width: 100%; height: 200px; object-fit: cover; }
-        .card-body { padding: 30px; }
-        .btn { background: var(--yellow); color: var(--blue); border: none; padding: 15px; border-radius: 12px; font-weight: 800; cursor: pointer; width: 100%; text-transform: uppercase; }
+        /* GRID */
+        .section-h { font-size: 2rem; color: var(--blue); margin: 50px 0 20px; border-left: 10px solid var(--yellow); padding-left: 20px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
+        .card { background: white; border-radius: 25px; overflow: hidden; box-shadow: 0 10px 20px rgba(0,0,0,0.05); text-align: center; transition: 0.3s; }
+        .card img { width: 100%; height: 180px; object-fit: cover; }
+        .card-body { padding: 25px; }
+        
+        .btn { background: var(--yellow); color: var(--blue); border: none; padding: 14px; border-radius: 10px; font-weight: 800; cursor: pointer; width: 100%; text-transform: uppercase; }
+        .btn:hover { background: #e6c200; }
 
-        /* 5. ABOUT & CONTACT */
-        .content-box { background: white; padding: 40px; border-radius: 25px; box-shadow: 0 10px 20px rgba(0,0,0,0.05); }
-        footer { background: #002244; color: white; padding: 50px 20px; text-align: center; margin-top: 80px; }
+        footer { text-align: center; padding: 40px; color: #888; }
     </style>
 </head>
 <body>
 
-<div class="ticker-wrap"><div class="ticker-move" id="ticker-text">LOADING CITIZEN DATA...</div></div>
+<div class="ticker-wrap"><div class="ticker-move" id="ticker-text">LOADING SYSTEM...</div></div>
 
 <header>
     <a href="#" class="logo">ልማት Hub</a>
-    <div class="nav-links">
-        <a href="#about" id="n-about">About</a>
-        <a href="#tracks" id="n-tracks">Tracks</a>
-        <select class="lang-select" id="langPicker" onchange="updLang(this.value)">
-            <option value="en">English</option>
-            <option value="am">አማርኛ</option>
-            <option value="om">Oromoo</option>
-        </select>
-    </div>
+    <select class="lang-select" id="langPicker" onchange="updLang(this.value)">
+        <option value="en">English</option>
+        <option value="am">አማርኛ</option>
+        <option value="om">Oromoo</option>
+    </select>
 </header>
 
 <div class="container">
     <div class="hero">
         <h1 id="h-title">Ethiopia's 2026 Digital Mission</h1>
-        <p id="h-sub">Enter Fayda ID to begin your professional journey</p>
-        <input type="number" id="id-box" class="id-input" placeholder="Enter 10-Digit Fayda ID">
-    </div>
-
-    <div id="about">
-        <h2 class="section-h" id="a-head">About Us</h2>
-        <div class="content-box"><p id="a-text">ልማት Hub is the central portal for the Digital Ethiopia 2026 initiative, connecting citizens with world-class technology tracks.</p></div>
+        <p id="h-sub">Enter your Fayda ID below to join a track</p>
+        <input type="number" id="id-box" class="id-input" placeholder="Enter 10-Digit ID">
     </div>
 
     <div id="tracks">
@@ -74,40 +64,48 @@
     </div>
 </div>
 
-<footer>
-    <h2 style="color:var(--yellow)">ልማት Hub</h2>
-    <p>© 2026 Mission 2026 Partnership</p>
-</footer>
+<footer>© 2026 ልማት Hub</footer>
 
 <script>
-    /* THE BRAIN ENGINE */
     const images = ["https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500", "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500", "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500", "https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=500", "https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=500", "https://images.unsplash.com/photo-1639762681485-074b7f938ba0?w=500", "https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?w=500", "https://images.unsplash.com/photo-1518770660439-4636190af475?w=500", "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"];
 
     const data = {
-        en: { title: "Ethiopia's 2026 Digital Mission", about: "About Us", tracks: "Official Tracks", join: "JOIN TRACK", welcome: "Success! Verified for: ", goal: "Citizens Registered: ", names: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"] },
-        am: { title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", about: "ስለ እኛ", tracks: "ይፋዊ ትራኮች", join: "ተቀላቀል", welcome: "ተሳክቷል! የተረጋገጠው ለ፡ ", goal: "የተመዘገቡ ዜጎች፡ ", names: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"] },
-        om: { title: "Misiyoona Diijitaalaa 2026", about: "Waa'ee Keenya", tracks: "Kallattiiwwan", join: "MAKKAMI", welcome: "Milkaa'eera! Kallattiin: ", goal: "Lammilee Galmeeffaman: ", names: ["AI", "Cyber", "Web", "Data", "Cloud", "Mobile", "Block", "UI/UX", "IoT", "Fintech"] }
+        en: { title: "Ethiopia's 2026 Digital Mission", tracks: "Official Tracks", join: "JOIN TRACK", welcome: "Verified! Track: ", goal: "Citizens Enrolled: ", error: "Please enter a valid 10-digit Fayda ID first.", names: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"] },
+        am: { title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", tracks: "ይፋዊ ትራኮች", join: "ተቀላቀል", welcome: "ተረጋግጧል! ትራክ፡ ", goal: "የተመዘገቡ ዜጎች፡ ", error: "እባክዎ መጀመሪያ ትክክለኛ ባለ 10 አሃዝ የፋይዳ መታወቂያ ያስገቡ።", names: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"] },
+        om: { title: "Misiyoona Diijitaalaa 2026", tracks: "Kallattiiwwan", join: "MAKKAMI", welcome: "Mirkaneeffameera! Kallattii: ", goal: "Lammilee Galmeeffaman: ", error: "Maaloo jalqaba lakkoofsa ID Faydaa digitii 10 galchaa.", names: ["AI", "Cyber", "Web", "Data", "Cloud", "Mobile", "Block", "UI/UX", "IoT", "Fintech"] }
     };
 
-    let count = 852400;
+    // 1. Live Ticker Logic
+    let count = 854210;
     setInterval(() => {
         count += Math.floor(Math.random() * 2);
         let l = localStorage.getItem('hubLang') || 'en';
         document.getElementById('ticker-text').innerText = `${data[l].goal} ${count.toLocaleString()} / 1,000,000`;
     }, 3000);
 
-    function handleJoin(t) {
-        let id = document.getElementById('id-box').value;
-        if(id.length !== 10) { alert("Please enter 10-digit ID"); return; }
-        localStorage.setItem('userEnroll', JSON.stringify({id, t}));
-        location.reload();
+    // 2. THE FIX: Touch/Click Recognition
+    function handleJoin(trackName) {
+        const idInput = document.getElementById('id-box');
+        const lang = localStorage.getItem('hubLang') || 'en';
+
+        // Check if ID is empty or wrong length
+        if (idInput.value.length !== 10) {
+            alert(data[lang].error);
+            idInput.focus();
+            return;
+        }
+
+        // Save to invisible memory
+        localStorage.setItem('userEnroll', JSON.stringify({id: idInput.value, track: trackName}));
+        alert("Verification Success!");
+        location.reload(); // Refresh to show welcome message
     }
 
+    // 3. Language & UI Sync
     function updLang(l) {
         localStorage.setItem('hubLang', l);
         let d = data[l];
         document.getElementById('h-title').innerText = d.title;
-        document.getElementById('a-head').innerText = d.about;
         document.getElementById('t-head').innerText = d.tracks;
         
         let list = document.getElementById('track-list');
@@ -116,10 +114,11 @@
             list.innerHTML += `<div class="card"><img src="${images[i]}"><div class="card-body"><h3>${n}</h3><button class="btn" onclick="handleJoin('${n}')">${d.join}</button></div></div>`;
         });
 
+        // Check if already enrolled
         let saved = localStorage.getItem('userEnroll');
         if(saved) {
             let info = JSON.parse(saved);
-            document.getElementById('h-sub').innerHTML = `<b style="color:var(--yellow); font-size:1.2rem;">${d.welcome}${info.t}</b>`;
+            document.getElementById('h-sub').innerHTML = `<b style="color:var(--yellow); font-size:1.3rem;">${d.welcome}${info.track}</b>`;
             document.getElementById('id-box').style.display = 'none';
         }
     }
