--- a/index.html
+++ b/index.html
@@ -3,44 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Mission 2026</title>
+    <title>ልማት Hub | Digital Mission 2026</title>
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f0f4f8; --white: #ffffff; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
-        body { background: var(--bg); color: #333; }
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8fafc; --white: #ffffff; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', 'Segoe UI', sans-serif; scroll-behavior: smooth; }
+        body { background: var(--bg); color: #1e293b; }
 
-        /* TICKER */
-        .ticker-wrap { background: var(--yellow); color: var(--blue); padding: 12px 0; font-weight: 800; position: sticky; top: 0; z-index: 2000; overflow: hidden; }
-        .ticker-move { display: inline-block; white-space: nowrap; padding-left: 100%; animation: ticker 25s linear infinite; }
+        /* 1. PROGRESS TICKER */
+        .ticker-wrap { background: var(--blue); color: white; padding: 12px 0; font-weight: 600; position: sticky; top: 0; z-index: 2000; overflow: hidden; border-bottom: 3px solid var(--yellow); }
+        .ticker-move { display: inline-block; white-space: nowrap; padding-left: 100%; animation: ticker 30s linear infinite; }
         @keyframes ticker { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
 
-        /* HEADER */
-        header { background: var(--white); height: 80px; display: flex; justify-content: space-between; align-items: center; padding: 0 8%; position: sticky; top: 45px; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
-        .logo { font-size: 26px; font-weight: 900; color: var(--blue); text-decoration: none; }
-        .lang-select { border: 2px solid var(--blue); padding: 5px 10px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        /* 2. MODERN NAV */
+        header { background: rgba(255, 255, 255, 0.9); backdrop-filter: blur(10px); height: 75px; display: flex; justify-content: space-between; align-items: center; padding: 0 8%; position: sticky; top: 43px; z-index: 1000; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1); }
+        .logo { font-size: 24px; font-weight: 800; color: var(--blue); text-decoration: none; display: flex; align-items: center; gap: 10px; }
+        .logo::before { content: '◈'; color: var(--yellow); font-size: 30px; }
+        .lang-select { border: 2px solid var(--blue); padding: 6px 12px; border-radius: 10px; font-weight: 700; cursor: pointer; color: var(--blue); outline: none; }
 
-        /* HERO & INPUT */
-        .container { max-width: 1100px; margin: 40px auto; padding: 0 20px; }
-        .hero { background: var(--blue); color: white; padding: 70px 30px; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); }
-        .id-input { padding: 18px; width: 90%; max-width: 400px; border-radius: 12px; border: 2px solid transparent; margin: 25px 0; font-size: 1.2rem; text-align: center; }
-        .id-input:focus { border-color: var(--yellow); outline: none; }
+        /* 3. CLIENT HERO */
+        .container { max-width: 1200px; margin: 40px auto; padding: 0 20px; }
+        .hero { 
+            background: linear-gradient(135deg, #003973 0%, #0056b3 100%); 
+            color: white; padding: 80px 20px; border-radius: 35px; text-align: center; 
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1); position: relative;
+        }
+        .hero h1 { font-size: 2.8rem; margin-bottom: 15px; letter-spacing: -1px; }
+        .id-input { 
+            padding: 20px; width: 90%; max-width: 480px; border-radius: 18px; border: 3px solid transparent; 
+            margin: 30px 0; font-size: 1.3rem; text-align: center; transition: 0.4s;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.2);
+        }
+        .id-input:focus { border-color: var(--yellow); transform: scale(1.03); outline: none; }
 
-        /* GRID */
-        .section-h { font-size: 2rem; color: var(--blue); margin: 50px 0 20px; border-left: 10px solid var(--yellow); padding-left: 20px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
-        .card { background: white; border-radius: 25px; overflow: hidden; box-shadow: 0 10px 20px rgba(0,0,0,0.05); text-align: center; transition: 0.3s; }
-        .card img { width: 100%; height: 180px; object-fit: cover; }
-        .card-body { padding: 25px; }
+        /* 4. TRACKS GRID */
+        .section-h { font-size: 2.2rem; color: var(--blue); margin: 60px 0 30px; display: flex; align-items: center; gap: 15px; }
+        .section-h::after { content: ''; height: 4px; background: var(--yellow); flex-grow: 1; border-radius: 10px; }
         
-        .btn { background: var(--yellow); color: var(--blue); border: none; padding: 14px; border-radius: 10px; font-weight: 800; cursor: pointer; width: 100%; text-transform: uppercase; }
-        .btn:hover { background: #e6c200; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 30px; }
+        .card { 
+            background: white; border-radius: 28px; overflow: hidden; 
+            box-shadow: 0 4px 6px -1px rgba(0,0,0,0.05); transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            border: 1px solid #e2e8f0;
+        }
+        .card:hover { transform: translateY(-15px); box-shadow: 0 25px 30px -10px rgba(0,0,0,0.1); border-color: var(--yellow); }
+        .card img { width: 100%; height: 210px; object-fit: cover; transition: 0.5s; }
+        .card:hover img { transform: scale(1.1); }
+        .card-body { padding: 30px; }
+        .card h3 { font-size: 1.5rem; margin-bottom: 20px; color: var(--blue); }
+        
+        .btn { 
+            background: var(--yellow); color: var(--blue); border: none; 
+            padding: 16px; border-radius: 15px; font-weight: 800; cursor: pointer; 
+            width: 100%; text-transform: uppercase; letter-spacing: 1px; transition: 0.3s;
+        }
+        .btn:hover { background: var(--blue); color: white; }
 
-        footer { text-align: center; padding: 40px; color: #888; }
+        /* 5. FOOTER */
+        footer { background: #0f172a; color: #94a3b8; padding: 80px 20px; text-align: center; margin-top: 100px; border-radius: 50px 50px 0 0; }
+        .footer-logo { color: white; font-size: 2rem; font-weight: 800; margin-bottom: 20px; }
     </style>
 </head>
 <body>
 
-<div class="ticker-wrap"><div class="ticker-move" id="ticker-text">LOADING SYSTEM...</div></div>
+<div class="ticker-wrap"><div class="ticker-move" id="ticker-text">CONNECTING TO MISSION 2026 NETWORK...</div></div>
 
 <header>
     <a href="#" class="logo">ልማት Hub</a>
@@ -54,8 +79,8 @@
 <div class="container">
     <div class="hero">
         <h1 id="h-title">Ethiopia's 2026 Digital Mission</h1>
-        <p id="h-sub">Enter your Fayda ID below to join a track</p>
-        <input type="number" id="id-box" class="id-input" placeholder="Enter 10-Digit ID">
+        <p id="h-sub" style="font-size: 1.2rem; opacity: 0.9;">Secure your spot in the future economy.</p>
+        <input type="number" id="id-box" class="id-input" placeholder="10-Digit Fayda ID">
     </div>
 
     <div id="tracks">
@@ -64,44 +89,54 @@
     </div>
 </div>
 
-<footer>© 2026 ልማት Hub</footer>
+<footer>
+    <div class="footer-logo">ልማት Hub</div>
+    <p>A partnership for Digital Ethiopia 2026</p>
+    <div style="margin-top: 30px; font-size: 0.8rem;">Powered by National ID Program & MoIT</div>
+</footer>
 
 <script>
-    const images = ["https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500", "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500", "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500", "https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=500", "https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=500", "https://images.unsplash.com/photo-1639762681485-074b7f938ba0?w=500", "https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?w=500", "https://images.unsplash.com/photo-1518770660439-4636190af475?w=500", "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"];
+    const images = [
+        "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", 
+        "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500", 
+        "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500", 
+        "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500", 
+        "https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=500", 
+        "https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=500", 
+        "https://images.unsplash.com/photo-1639762681485-074b7f938ba0?w=500", 
+        "https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?w=500", 
+        "https://images.unsplash.com/photo-1518770660439-4636190af475?w=500", 
+        "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"
+    ];
 
     const data = {
-        en: { title: "Ethiopia's 2026 Digital Mission", tracks: "Official Tracks", join: "JOIN TRACK", welcome: "Verified! Track: ", goal: "Citizens Enrolled: ", error: "Please enter a valid 10-digit Fayda ID first.", names: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"] },
-        am: { title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", tracks: "ይፋዊ ትራኮች", join: "ተቀላቀል", welcome: "ተረጋግጧል! ትራክ፡ ", goal: "የተመዘገቡ ዜጎች፡ ", error: "እባክዎ መጀመሪያ ትክክለኛ ባለ 10 አሃዝ የፋይዳ መታወቂያ ያስገቡ።", names: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"] },
-        om: { title: "Misiyoona Diijitaalaa 2026", tracks: "Kallattiiwwan", join: "MAKKAMI", welcome: "Mirkaneeffameera! Kallattii: ", goal: "Lammilee Galmeeffaman: ", error: "Maaloo jalqaba lakkoofsa ID Faydaa digitii 10 galchaa.", names: ["AI", "Cyber", "Web", "Data", "Cloud", "Mobile", "Block", "UI/UX", "IoT", "Fintech"] }
+        en: { title: "Ethiopia's 2026 Digital Mission", tracks: "Official Tracks", join: "JOIN TRACK", welcome: "Access Granted: ", goal: "Live Enrollment: ", error: "Enter 10-digit Fayda ID first.", names: ["AI Engineering", "Cyber Security", "Fullstack Web", "Data Science", "Cloud Architecture", "Mobile App Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Digital Fintech"] },
+        am: { title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", tracks: "ይፋዊ ትራኮች", join: "ተቀላቀል", welcome: "ተፈቅዷል! ትራክ፡ ", goal: "ቀጥታ ምዝገባ፡ ", error: "መጀመሪያ ባለ 10 አሃዝ መታወቂያ ያስገቡ።", names: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል ልማት", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"] },
+        om: { title: "Misiyoona Diijitaalaa 2026", tracks: "Kallattiiwwan", join: "ITTI MAKKAMI", welcome: "Hayyamameera! Kallattii: ", goal: "Galmeessaa Jira: ", error: "Lakkoofsa ID Faydaa digitii 10 galchaa.", names: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile", "Blockchain", "UI/UX", "IoT", "Fintech"] }
     };
 
-    // 1. Live Ticker Logic
-    let count = 854210;
+    let count = 856320;
     setInterval(() => {
-        count += Math.floor(Math.random() * 2);
+        count += Math.floor(Math.random() * 3);
         let l = localStorage.getItem('hubLang') || 'en';
-        document.getElementById('ticker-text').innerText = `${data[l].goal} ${count.toLocaleString()} / 1,000,000`;
-    }, 3000);
+        document.getElementById('ticker-text').innerText = `● ${data[l].goal} ${count.toLocaleString()} / 1,000,000 CITIZENS ACTIVE`;
+    }, 2500);
 
-    // 2. THE FIX: Touch/Click Recognition
     function handleJoin(trackName) {
-        const idInput = document.getElementById('id-box');
-        const lang = localStorage.getItem('hubLang') || 'en';
+        const idBox = document.getElementById('id-box');
+        const l = localStorage.getItem('hubLang') || 'en';
 
-        // Check if ID is empty or wrong length
-        if (idInput.value.length !== 10) {
-            alert(data[lang].error);
-            idInput.focus();
+        if (idBox.value.length !== 10) {
+            alert(data[l].error);
+            idBox.style.boxShadow = "0 0 20px rgba(255,0,0,0.5)";
             return;
         }
 
-        // Save to invisible memory
-        localStorage.setItem('userEnroll', JSON.stringify({id: idInput.value, track: trackName}));
-        alert("Verification Success!");
-        location.reload(); // Refresh to show welcome message
+        localStorage.setItem('userEnroll', JSON.stringify({id: idBox.value, track: trackName}));
+        alert("Verification Success! Welcome to the Mission.");
+        location.reload();
     }
 
-    // 3. Language & UI Sync
     function updLang(l) {
         localStorage.setItem('hubLang', l);
         let d = data[l];
@@ -111,14 +146,23 @@
         let list = document.getElementById('track-list');
         list.innerHTML = "";
         d.names.forEach((n, i) => {
-            list.innerHTML += `<div class="card"><img src="${images[i]}"><div class="card-body"><h3>${n}</h3><button class="btn" onclick="handleJoin('${n}')">${d.join}</button></div></div>`;
+            list.innerHTML += `
+                <div class="card">
+                    <img src="${images[i]}">
+                    <div class="card-body">
+                        <h3>${n}</h3>
+                        <button class="btn" onclick="handleJoin('${n}')">${d.join}</button>
+                    </div>
+                </div>`;
         });
 
-        // Check if already enrolled
         let saved = localStorage.getItem('userEnroll');
         if(saved) {
             let info = JSON.parse(saved);
-            document.getElementById('h-sub').innerHTML = `<b style="color:var(--yellow); font-size:1.3rem;">${d.welcome}${info.track}</b>`;
+            document.getElementById('h-sub').innerHTML = `
+                <span style="background:var(--yellow); color:var(--blue); padding:10px 20px; border-radius:10px; font-weight:800;">
+                    ${d.welcome}${info.track}
+                </span>`;
             document.getElementById('id-box').style.display = 'none';
         }
     }
