--- a/index.html
+++ b/index.html
@@ -10,30 +10,35 @@
         body { background: var(--bg); color: #333; }
 
         /* HEADER & LANGUAGES */
-        header { background: white; padding: 15px 8%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); sticky; top: 0; z-index: 1000; }
+        header { background: white; padding: 15px 8%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
         .logo { font-size: 24px; font-weight: 800; color: var(--blue); text-decoration: none; }
         .lang-bar { display: flex; gap: 5px; }
-        .l-btn { padding: 5px 10px; border: 1px solid var(--blue); background: white; cursor: pointer; border-radius: 5px; font-weight: bold; font-size: 0.7rem; }
+        .l-btn { padding: 6px 12px; border: 1.5px solid var(--blue); background: white; cursor: pointer; border-radius: 8px; font-weight: bold; font-size: 0.75rem; transition: 0.3s; }
         .l-btn.active { background: var(--blue); color: white; }
 
-        /* BLUE HERO BOX */
+        /* HERO AREA - RESTORED BLUE DESIGN */
         .container { max-width: 1100px; margin: 30px auto; padding: 0 20px; }
-        .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 10px 30px rgba(0,0,0,0.15); }
+        .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 35px; text-align: center; border-bottom: 8px solid var(--yellow); box-shadow: 0 15px 35px rgba(0,0,0,0.2); }
+        .hero h1 { font-size: 2.2rem; margin-bottom: 10px; }
         
         .input-group { display: flex; gap: 10px; justify-content: center; align-items: center; margin-top: 25px; flex-wrap: wrap; }
-        .id-input { padding: 15px; width: 280px; border-radius: 12px; border: none; font-size: 1.1rem; text-align: center; }
-        .v-btn { background: var(--yellow); color: var(--blue); border: none; padding: 15px 30px; border-radius: 12px; font-weight: bold; cursor: pointer; }
+        .id-input { padding: 15px; width: 300px; border-radius: 12px; border: none; font-size: 1.1rem; text-align: center; color: #333; }
+        .v-btn { background: var(--yellow); color: var(--blue); border: none; padding: 15px 35px; border-radius: 12px; font-weight: 800; cursor: pointer; transition: 0.3s; }
+        .v-btn:hover { transform: scale(1.05); }
 
-        /* TRACK CARDS */
-        .section-h { font-size: 1.8rem; color: var(--blue); margin: 40px 0 20px; border-left: 8px solid var(--yellow); padding-left: 15px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 20px; }
-        .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; }
-        .card img { width: 100%; height: 160px; object-fit: cover; }
-        .card-body { padding: 20px; }
-        .join-btn { background: var(--yellow); color: var(--blue); border: none; padding: 12px; border-radius: 10px; font-weight: bold; width: 100%; cursor: pointer; }
+        /* TRACK CARDS - RESTORED IMAGE LOOK */
+        .section-h { font-size: 1.8rem; color: var(--blue); margin: 40px 0 20px; border-left: 10px solid var(--yellow); padding-left: 15px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 25px; }
+        .card { background: white; border-radius: 25px; overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,0.06); text-align: center; border: 1px solid #eee; }
+        .card img { width: 100%; height: 180px; object-fit: cover; }
+        .card-body { padding: 25px; }
+        .join-btn { background: var(--yellow); color: var(--blue); border: none; padding: 14px; border-radius: 12px; font-weight: 800; width: 100%; cursor: pointer; text-transform: uppercase; }
 
-        footer { text-align: center; padding: 40px; color: #888; }
-        .reset-link { color: var(--yellow); cursor: pointer; text-decoration: underline; margin-top: 10px; display: inline-block; }
+        /* DASHBOARD ELEMENTS */
+        .dashboard-info { background: rgba(255,255,255,0.1); padding: 20px; border-radius: 20px; display: inline-block; margin-top: 15px; border: 1px solid rgba(255,255,255,0.2); }
+        .reset-btn { color: var(--yellow); cursor: pointer; text-decoration: underline; display: block; margin-top: 15px; font-weight: bold; }
+
+        footer { text-align: center; padding: 50px; color: #94a3b8; font-size: 0.9rem; }
     </style>
 </head>
 <body>
@@ -41,51 +46,54 @@
 <header>
     <a href="#" class="logo">ልማት Hub</a>
     <div class="lang-bar">
-        <button class="l-btn" onclick="setLang('en')" id="en-btn">EN</button>
-        <button class="l-btn" onclick="setLang('am')" id="am-btn">አማር</button>
-        <button class="l-btn" onclick="setLang('om')" id="om-btn">ORM</button>
-        <button class="l-btn" onclick="setLang('ti')" id="ti-btn">TIG</button>
+        <button class="l-btn" onclick="changeLang('en')" id="en-btn">EN</button>
+        <button class="l-btn" onclick="changeLang('am')" id="am-btn">አማር</button>
+        <button class="l-btn" onclick="changeLang('om')" id="om-btn">ORM</button>
+        <button class="l-btn" onclick="changeLang('ti')" id="ti-btn">TIG</button>
     </div>
 </header>
 
 <div class="container">
-    <div class="hero" id="hero-box">
+    <div class="hero" id="hero-content">
         </div>
 
-    <div id="tracks-area">
+    <div id="tracks-section">
         <h2 class="section-h" id="track-title">Official Tracks</h2>
         <div class="grid" id="track-list"></div>
     </div>
 </div>
 
-<footer>© 2026 ልማት Hub | Digital Ethiopia</footer>
+<footer>© 2026 ልማት Hub | Digital Ethiopia Initiative</footer>
 
 <script>
-    const dictionary = {
-        en: { head: "Ethiopia's 2026 Digital Mission", sub: "Enter 10-Digit Fayda ID", verify: "VERIFY", tracks: "Official Tracks", join: "JOIN TRACK", success: "Verified Member", reset: "Change ID" },
-        am: { head: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", sub: "ባለ 10 አሃዝ የፋይዳ መታወቂያ ያስገቡ", verify: "አረጋግጥ", tracks: "ይፋዊ ትራኮች", join: "ተቀላቀል", success: "የተረጋገጠ አባል", reset: "መታወቂያ ቀይር" },
-        om: { head: "Misiyoona Diijitaalaa 2026", sub: "ID Faydaa diijitii 10 galchaa", verify: "MIRKANEESSI", tracks: "Kallattiiwwan", join: "MAKKAMI", success: "Mirkaneeffameera", reset: "ID Jijjiiri" },
-        ti: { head: "ዲጂታል ሚሽን 2026", sub: "ባዓል 10 ኣሃዝ ፋይዳ መለለዪ የእትዉ", verify: "ኣረጋግፅ", tracks: "ዝተመረፁ ትራኮች", join: "ተሳተፍ", success: "ዝተረጋገፀ ኣባል", reset: "መለለዪ ቀይር" }
+    const data = {
+        en: { head: "Ethiopia's 2026 Digital Mission", sub: "Enter 10-Digit Fayda ID", verify: "VERIFY", tracks: "Official Tracks", join: "JOIN TRACK", success: "Verified Citizen", reset: "Change ID / Return", err: "Please enter 10 digits" },
+        am: { head: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", sub: "ባለ 10 አሃዝ የፋይዳ መታወቂያ ያስገቡ", verify: "አረጋግጥ", tracks: "ይፋዊ ትራኮች", join: "ተቀላቀል", success: "የተረጋገጠ ዜጋ", reset: "መታወቂያ ቀይር / ተመለስ", err: "እባክዎን 10 አሃዞችን ያስገቡ" },
+        om: { head: "Misiyoona Diijitaalaa 2026", sub: "ID Faydaa diijitii 10 galchaa", verify: "MIRKANEESSI", tracks: "Kallattiiwwan", join: "MAKKAMI", success: "Mirkaneeffameera", reset: "ID Jijjiiri / Deebi'i", err: "Maaloo lakkoofsa 10 galchaa" },
+        ti: { head: "ዲጂታል ሚሽን 2026", sub: "ባዓል 10 ኣሃዝ ፋይዳ መለለዪ የእትዉ", verify: "ኣረጋግፅ", tracks: "ዝተመረፁ ትራኮች", join: "ተሳተፍ", success: "ዝተረጋገፀ ዜጋ", reset: "መለለዪ ቀይር / ተመለስ", err: "በጃኹም 10 ኣሃዝ የእትዉ" }
     };
 
-    const trackNames = ["AI Engineering", "Cyber Security", "Web Dev", "Data Science"];
-    const images = ["https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500", "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500", "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500"];
+    const tracks = [
+        { name: "AI Engineering", img: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500" },
+        { name: "Cyber Security", img: "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500" },
+        { name: "Web Dev", img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500" },
+        { name: "Data Science", img: "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500" }
+    ];
 
-    let lang = localStorage.getItem('hubLang') || 'en';
+    let currentLang = localStorage.getItem('hubLang') || 'en';
 
-    function setLang(l) {
-        lang = l;
+    function changeLang(l) {
+        currentLang = l;
         localStorage.setItem('hubLang', l);
         document.querySelectorAll('.l-btn').forEach(b => b.classList.remove('active'));
         document.getElementById(l + '-btn').classList.add('active');
-        render();
+        renderUI();
     }
 
-    function render() {
-        const d = dictionary[lang];
+    function renderUI() {
+        const d = data[currentLang];
         const saved = localStorage.getItem('userEnroll');
-        const hero = document.getElementById('hero-box');
-        
+        const hero = document.getElementById('hero-content');
         document.getElementById('track-title').innerText = d.tracks;
 
         if (!saved) {
@@ -93,43 +101,46 @@
                 <h1>${d.head}</h1>
                 <p style="margin-top:10px;">${d.sub}</p>
                 <div class="input-group">
-                    <input type="number" id="id-box" class="id-input" placeholder="0000000000">
-                    <button onclick="alert('ID Saved! Now click JOIN on a track below.')" class="v-btn">${d.verify}</button>
+                    <input type="number" id="f-id" class="id-input" placeholder="0000000000">
+                    <button onclick="alert('Verified! Now join a track below.')" class="v-btn">${d.verify}</button>
                 </div>
             `;
-            document.getElementById('tracks-area').style.display = 'block';
+            document.getElementById('tracks-section').style.display = 'block';
         } else {
             const info = JSON.parse(saved);
             hero.innerHTML = `
                 <h1 style="color:var(--yellow)">${d.success}</h1>
-                <p>ID: ${info.id} | Track: <b>${info.track}</b></p>
-                <span class="reset-link" onclick="localStorage.removeItem('userEnroll'); render();">${d.reset}</span>
+                <div class="dashboard-info">
+                    <p>Verified ID: <b>${info.id}</b></p>
+                    <p>Enrolled Track: <b>${info.track}</b></p>
+                </div>
+                <span class="reset-btn" onclick="localStorage.removeItem('userEnroll'); renderUI();">${d.reset}</span>
             `;
-            document.getElementById('tracks-area').style.display = 'none';
+            document.getElementById('tracks-section').style.display = 'none';
         }
 
         const list = document.getElementById('track-list');
         list.innerHTML = "";
-        trackNames.forEach((n, i) => {
+        tracks.forEach(t => {
             list.innerHTML += `
                 <div class="card">
-                    <img src="${images[i]}">
+                    <img src="${t.img}">
                     <div class="card-body">
-                        <h3>${n}</h3>
-                        <button class="join-btn" onclick="enroll('${n}')">${d.join}</button>
+                        <h3>${t.name}</h3>
+                        <button class="join-btn" onclick="enroll('${t.name}')">${d.join}</button>
                     </div>
                 </div>`;
         });
     }
 
-    function enroll(track) {
-        const id = document.getElementById('id-box').value;
-        if(id.length !== 10) { alert(dictionary[lang].sub); return; }
-        localStorage.setItem('userEnroll', JSON.stringify({id, track}));
-        render();
+    function enroll(tName) {
+        const id = document.getElementById('f-id').value;
+        if(id.length !== 10) { alert(data[currentLang].err); return; }
+        localStorage.setItem('userEnroll', JSON.stringify({id, track: tName}));
+        renderUI();
     }
 
-    setLang(lang);
+    changeLang(currentLang);
 </script>
 </body>
 </html>
